[gd_scene load_steps=4 format=3 uid="uid://dirx1pwsdxbkp"]

[ext_resource type="Script" path="res://games/CrackingGame/CrackingGame.gd" id="1_s24qa"]
[ext_resource type="Texture2D" uid="uid://ci0p7le8o6yg5" path="res://icon.svg" id="2_ikun7"]

[sub_resource type="Curve2D" id="Curve2D_iq5qu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 182, 60.8, 0, 0, 0, 0, 147, 69.0667, 0, 0, 0, 0, 119, 98, 0, 0, 0, 0, 147, 69.0667, 0, 0, 0, 0, 182, 60.8)
}
point_count = 5

[node name="CrackingGame" type="Node2D"]
script = ExtResource("1_s24qa")
crack_speed = 400

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 160.0
color = Color(0.65098, 0.427451, 0.92549, 1)

[node name="EggStuff" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="EggStuff"]
position = Vector2(0, 3.16129)
scale = Vector2(1, 0.967742)
curve = SubResource("Curve2D_iq5qu")

[node name="PathFollow2D" type="PathFollow2D" parent="EggStuff/Path2D"]
position = Vector2(182, 60.8)
rotation = 2.69093
rotates = false
loop = false

[node name="Sprite2D" type="Sprite2D" parent="EggStuff/Path2D/PathFollow2D"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_ikun7")
flip_v = true

[node name="Cracks" type="Label" parent="."]
offset_left = 108.0
offset_top = 26.0
offset_right = 148.0
offset_bottom = 49.0

[node name="Crack_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Crack_timer" to="." method="_on_crack_timer_timeout"]
